--- a/13. Naive Bayes Classifier Algorithm/01_naive_bayes_titanic_survival_prediction.ipynb
+++ b/13. Naive Bayes Classifier Algorithm/01_naive_bayes_titanic_survival_prediction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Naive Bayes Tutorial Part 1: Predicting survival from titanic crash"
+    "Predicting survival from titanic crash"
    ]
   },
   {
