--- a/13. Naive Bayes Classifier Algorithm/02_naive_bayes_email_spam_filter.ipynb
+++ b/13. Naive Bayes Classifier Algorithm/02_naive_bayes_email_spam_filter.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Email spam filtering"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
