hyper parameter tuning

--- a/14. Hyper Parameter Tuning/hyper_parameter_tuning_using_GridSearchCV.ipynb
+++ b/14. Hyper Parameter Tuning/hyper_parameter_tuning_using_GridSearchCV.ipynb
@@ -7,7 +7,7 @@
     "<span style=\"color:purple\">Finding best model and hyper parameter tunning using GridSearchCV</span>\n",
     "\n",
     "For iris flower dataset in sklearn library, we are going to find out best model and best hyper parameters using GridSearchCV\n",
-    "![alt text](iris_petal_sepal-1.png)"
+    "![alt text](iris_petal_sepal.png)"
    ]
   },
   {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 535,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 536,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "[103 rows x 5 columns]"
       ]
      },
-     "execution_count": 517,
+     "execution_count": 536,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 537,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,16 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 538,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9555555555555556"
+       "1.0"
       ]
      },
-     "execution_count": 519,
+     "execution_count": 538,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 539,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": 540,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "array([1.        , 1.        , 0.9       , 0.96666667, 1.        ])"
       ]
      },
-     "execution_count": 521,
+     "execution_count": 540,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 541,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "array([0.96666667, 1.        , 0.96666667, 0.96666667, 1.        ])"
       ]
      },
-     "execution_count": 522,
+     "execution_count": 541,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 542,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "array([0.96666667, 1.        , 0.9       , 0.96666667, 1.        ])"
       ]
      },
-     "execution_count": 523,
+     "execution_count": 542,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 543,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 544,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        " 'linear_20': np.float64(0.9666666666666666)}"
       ]
      },
-     "execution_count": 525,
+     "execution_count": 544,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,20 +378,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 545,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mean_fit_time': array([8.77237320e-04, 1.62777901e-03, 0.00000000e+00, 0.00000000e+00,\n",
-       "        1.73478127e-03, 3.95298004e-05]),\n",
-       " 'std_fit_time': array([1.75447464e-03, 3.25555801e-03, 0.00000000e+00, 0.00000000e+00,\n",
-       "        3.46956253e-03, 7.90596008e-05]),\n",
-       " 'mean_score_time': array([0.        , 0.00170898, 0.        , 0.        , 0.        ,\n",
-       "        0.        ]),\n",
-       " 'std_score_time': array([0.        , 0.00333433, 0.        , 0.        , 0.        ,\n",
-       "        0.        ]),\n",
+       "{'mean_fit_time': array([0.        , 0.        , 0.00163026, 0.00160913, 0.        ,\n",
+       "        0.00162749]),\n",
+       " 'std_fit_time': array([0.        , 0.        , 0.00326052, 0.00321827, 0.        ,\n",
+       "        0.00325499]),\n",
+       " 'mean_score_time': array([0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 3.55720520e-05,\n",
+       "        1.60074234e-03, 0.00000000e+00]),\n",
+       " 'std_score_time': array([0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 7.11441040e-05,\n",
+       "        3.20148468e-03, 0.00000000e+00]),\n",
        " 'param_C': masked_array(data=[1, 1, 10, 10, 20, 20],\n",
        "              mask=[False, False, False, False, False, False],\n",
        "        fill_value=999999),\n",
@@ -420,7 +420,7 @@
        " 'rank_test_score': array([1, 1, 1, 4, 5, 6], dtype=int32)}"
       ]
      },
-     "execution_count": 526,
+     "execution_count": 545,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 546,
    "metadata": {},
    "outputs": [
     {
@@ -481,8 +481,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.000877</td>\n",
-       "      <td>0.001754</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1</td>\n",
@@ -499,10 +499,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.001628</td>\n",
-       "      <td>0.003256</td>\n",
-       "      <td>0.001709</td>\n",
-       "      <td>0.003334</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>1</td>\n",
        "      <td>linear</td>\n",
        "      <td>{'C': 1, 'kernel': 'linear'}</td>\n",
@@ -517,8 +517,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.001630</td>\n",
+       "      <td>0.003261</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>10</td>\n",
@@ -535,10 +535,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.001609</td>\n",
+       "      <td>0.003218</td>\n",
+       "      <td>0.000036</td>\n",
+       "      <td>0.000071</td>\n",
        "      <td>10</td>\n",
        "      <td>linear</td>\n",
        "      <td>{'C': 10, 'kernel': 'linear'}</td>\n",
@@ -553,10 +553,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.001735</td>\n",
-       "      <td>0.003470</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.001601</td>\n",
+       "      <td>0.003201</td>\n",
        "      <td>20</td>\n",
        "      <td>rbf</td>\n",
        "      <td>{'C': 20, 'kernel': 'rbf'}</td>\n",
@@ -571,8 +571,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.000040</td>\n",
-       "      <td>0.000079</td>\n",
+       "      <td>0.001627</td>\n",
+       "      <td>0.003255</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>20</td>\n",
@@ -593,17 +593,17 @@
       ],
       "text/plain": [
        "   mean_fit_time  std_fit_time  ...  std_test_score  rank_test_score\n",
-       "0       0.000877      0.001754  ...        0.016330                1\n",
-       "1       0.001628      0.003256  ...        0.016330                1\n",
-       "2       0.000000      0.000000  ...        0.016330                1\n",
-       "3       0.000000      0.000000  ...        0.038873                4\n",
-       "4       0.001735      0.003470  ...        0.036515                5\n",
-       "5       0.000040      0.000079  ...        0.042164                6\n",
+       "0       0.000000      0.000000  ...        0.016330                1\n",
+       "1       0.000000      0.000000  ...        0.016330                1\n",
+       "2       0.001630      0.003261  ...        0.016330                1\n",
+       "3       0.001609      0.003218  ...        0.038873                4\n",
+       "4       0.000000      0.000000  ...        0.036515                5\n",
+       "5       0.001627      0.003255  ...        0.042164                6\n",
        "\n",
        "[6 rows x 15 columns]"
       ]
      },
-     "execution_count": 527,
+     "execution_count": 546,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 547,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "5       20       linear         0.966667"
       ]
      },
-     "execution_count": 528,
+     "execution_count": 547,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 548,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
        "{'C': 1, 'kernel': 'rbf'}"
       ]
      },
-     "execution_count": 529,
+     "execution_count": 548,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 549,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "np.float64(0.9800000000000001)"
       ]
      },
-     "execution_count": 530,
+     "execution_count": 549,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": 550,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +846,7 @@
        " 'verbose']"
       ]
      },
-     "execution_count": 531,
+     "execution_count": 550,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
+   "execution_count": 551,
    "metadata": {},
    "outputs": [
     {
@@ -896,15 +896,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>20</td>\n",
-       "      <td>rbf</td>\n",
-       "      <td>0.966667</td>\n",
+       "      <td>10</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>0.973333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <td>20</td>\n",
        "      <td>linear</td>\n",
-       "      <td>0.980000</td>\n",
+       "      <td>0.966667</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -912,11 +912,11 @@
       ],
       "text/plain": [
        "   param_C param_kernel  mean_test_score\n",
-       "0       20          rbf         0.966667\n",
-       "1        1       linear         0.980000"
+       "0       10       linear         0.973333\n",
+       "1       20       linear         0.966667"
       ]
      },
-     "execution_count": 532,
+     "execution_count": 551,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": 552,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 553,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>random_forest</td>\n",
-       "      <td>0.960000</td>\n",
+       "      <td>0.966667</td>\n",
        "      <td>{'n_estimators': 5}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1069,11 +1069,11 @@
       "text/plain": [
        "                 model  best_score                best_params\n",
        "0                  svm    0.980000  {'C': 1, 'kernel': 'rbf'}\n",
-       "1        random_forest    0.960000        {'n_estimators': 5}\n",
+       "1        random_forest    0.966667        {'n_estimators': 5}\n",
        "2  logistic_regression    0.966667                   {'C': 5}"
       ]
      },
-     "execution_count": 534,
+     "execution_count": 553,
      "metadata": {},
      "output_type": "execute_result"
     }
