--- a/14. Hyper Parameter Tuning/hyper_parameter_tuning_using_GridSearchCV.ipynb
+++ b/14. Hyper Parameter Tuning/hyper_parameter_tuning_using_GridSearchCV.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:purple\">Finding best model and hyper parameter tunning using GridSearchCV</span>\n",
+    "**<span style=\"color:purple\">Finding best model and hyper parameter tunning using GridSearchCV</span>**\n",
     "\n",
     "For iris flower dataset in sklearn library, we are going to find out best model and best hyper parameters using GridSearchCV\n",
     "![alt text](iris_petal_sepal.png)"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -155,23 +155,36 @@
        "</div>"
       ],
       "text/plain": [
-       "     sepal length (cm)  sepal width (cm)  ...  petal width (cm)      flower\n",
-       "47                 4.6               3.2  ...               0.2      setosa\n",
-       "48                 5.3               3.7  ...               0.2      setosa\n",
-       "49                 5.0               3.3  ...               0.2      setosa\n",
-       "50                 7.0               3.2  ...               1.4  versicolor\n",
-       "51                 6.4               3.2  ...               1.5  versicolor\n",
-       "..                 ...               ...  ...               ...         ...\n",
-       "145                6.7               3.0  ...               2.3   virginica\n",
-       "146                6.3               2.5  ...               1.9   virginica\n",
-       "147                6.5               3.0  ...               2.0   virginica\n",
-       "148                6.2               3.4  ...               2.3   virginica\n",
-       "149                5.9               3.0  ...               1.8   virginica\n",
+       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+       "47                 4.6               3.2                1.4               0.2   \n",
+       "48                 5.3               3.7                1.5               0.2   \n",
+       "49                 5.0               3.3                1.4               0.2   \n",
+       "50                 7.0               3.2                4.7               1.4   \n",
+       "51                 6.4               3.2                4.5               1.5   \n",
+       "..                 ...               ...                ...               ...   \n",
+       "145                6.7               3.0                5.2               2.3   \n",
+       "146                6.3               2.5                5.0               1.9   \n",
+       "147                6.5               3.0                5.2               2.0   \n",
+       "148                6.2               3.4                5.4               2.3   \n",
+       "149                5.9               3.0                5.1               1.8   \n",
+       "\n",
+       "         flower  \n",
+       "47       setosa  \n",
+       "48       setosa  \n",
+       "49       setosa  \n",
+       "50   versicolor  \n",
+       "51   versicolor  \n",
+       "..          ...  \n",
+       "145   virginica  \n",
+       "146   virginica  \n",
+       "147   virginica  \n",
+       "148   virginica  \n",
+       "149   virginica  \n",
        "\n",
        "[103 rows x 5 columns]"
       ]
      },
-     "execution_count": 536,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,12 +201,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">Approach 1: Use train_test_split and manually tune parameters by trail and error</span>"
+    "**<span style=\"color:green\">Approach 1: Use train_test_split and manually tune parameters by trail and error</span>**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,16 +216,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.9555555555555556"
       ]
      },
-     "execution_count": 538,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">Approach 2: Use K Fold Cross Validation</span>"
+    "**<span style=\"color:green\">Approach 2: Use K Fold Cross Validation</span>**"
    ]
   },
   {
@@ -239,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +270,7 @@
        "array([1.        , 1.        , 0.9       , 0.96666667, 1.        ])"
       ]
      },
-     "execution_count": 540,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +290,7 @@
        "array([0.96666667, 1.        , 0.96666667, 0.96666667, 1.        ])"
       ]
      },
-     "execution_count": 541,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +310,7 @@
        "array([0.96666667, 1.        , 0.9       , 0.96666667, 1.        ])"
       ]
      },
-     "execution_count": 542,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +351,7 @@
        " 'linear_20': np.float64(0.9666666666666666)}"
       ]
      },
-     "execution_count": 544,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">Approach 3: Use GridSearchCV</span>"
+    "**<span style=\"color:green\">Approach 3: Use GridSearchCV</span>**"
    ]
   },
   {
@@ -378,20 +391,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mean_fit_time': array([0.        , 0.        , 0.00163026, 0.00160913, 0.        ,\n",
-       "        0.00162749]),\n",
-       " 'std_fit_time': array([0.        , 0.        , 0.00326052, 0.00321827, 0.        ,\n",
-       "        0.00325499]),\n",
-       " 'mean_score_time': array([0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 3.55720520e-05,\n",
-       "        1.60074234e-03, 0.00000000e+00]),\n",
-       " 'std_score_time': array([0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 7.11441040e-05,\n",
-       "        3.20148468e-03, 0.00000000e+00]),\n",
+       "{'mean_fit_time': array([0.00103097, 0.00165768, 0.00158391, 0.00161762, 0.        ,\n",
+       "        0.        ]),\n",
+       " 'std_fit_time': array([0.00206194, 0.00331535, 0.00316782, 0.00323524, 0.        ,\n",
+       "        0.        ]),\n",
+       " 'mean_score_time': array([0., 0., 0., 0., 0., 0.]),\n",
+       " 'std_score_time': array([0., 0., 0., 0., 0., 0.]),\n",
        " 'param_C': masked_array(data=[1, 1, 10, 10, 20, 20],\n",
        "              mask=[False, False, False, False, False, False],\n",
        "        fill_value=999999),\n",
@@ -420,7 +431,7 @@
        " 'rank_test_score': array([1, 1, 1, 4, 5, 6], dtype=int32)}"
       ]
      },
-     "execution_count": 545,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -481,10 +492,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.001031</td>\n",
+       "      <td>0.002062</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>rbf</td>\n",
        "      <td>{'C': 1, 'kernel': 'rbf'}</td>\n",
@@ -499,10 +510,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.001658</td>\n",
+       "      <td>0.003315</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>linear</td>\n",
        "      <td>{'C': 1, 'kernel': 'linear'}</td>\n",
@@ -517,10 +528,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.001630</td>\n",
-       "      <td>0.003261</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.001584</td>\n",
+       "      <td>0.003168</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>10</td>\n",
        "      <td>rbf</td>\n",
        "      <td>{'C': 10, 'kernel': 'rbf'}</td>\n",
@@ -535,10 +546,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.001609</td>\n",
-       "      <td>0.003218</td>\n",
-       "      <td>0.000036</td>\n",
-       "      <td>0.000071</td>\n",
+       "      <td>0.001618</td>\n",
+       "      <td>0.003235</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>10</td>\n",
        "      <td>linear</td>\n",
        "      <td>{'C': 10, 'kernel': 'linear'}</td>\n",
@@ -555,8 +566,8 @@
        "      <th>4</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.001601</td>\n",
-       "      <td>0.003201</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>20</td>\n",
        "      <td>rbf</td>\n",
        "      <td>{'C': 20, 'kernel': 'rbf'}</td>\n",
@@ -571,10 +582,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.001627</td>\n",
-       "      <td>0.003255</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>20</td>\n",
        "      <td>linear</td>\n",
        "      <td>{'C': 20, 'kernel': 'linear'}</td>\n",
@@ -592,18 +603,40 @@
        "</div>"
       ],
       "text/plain": [
-       "   mean_fit_time  std_fit_time  ...  std_test_score  rank_test_score\n",
-       "0       0.000000      0.000000  ...        0.016330                1\n",
-       "1       0.000000      0.000000  ...        0.016330                1\n",
-       "2       0.001630      0.003261  ...        0.016330                1\n",
-       "3       0.001609      0.003218  ...        0.038873                4\n",
-       "4       0.000000      0.000000  ...        0.036515                5\n",
-       "5       0.001627      0.003255  ...        0.042164                6\n",
+       "   mean_fit_time  std_fit_time  mean_score_time  std_score_time  param_C  \\\n",
+       "0       0.001031      0.002062              0.0             0.0        1   \n",
+       "1       0.001658      0.003315              0.0             0.0        1   \n",
+       "2       0.001584      0.003168              0.0             0.0       10   \n",
+       "3       0.001618      0.003235              0.0             0.0       10   \n",
+       "4       0.000000      0.000000              0.0             0.0       20   \n",
+       "5       0.000000      0.000000              0.0             0.0       20   \n",
        "\n",
-       "[6 rows x 15 columns]"
+       "  param_kernel                         params  split0_test_score  \\\n",
+       "0          rbf      {'C': 1, 'kernel': 'rbf'}           0.966667   \n",
+       "1       linear   {'C': 1, 'kernel': 'linear'}           0.966667   \n",
+       "2          rbf     {'C': 10, 'kernel': 'rbf'}           0.966667   \n",
+       "3       linear  {'C': 10, 'kernel': 'linear'}           1.000000   \n",
+       "4          rbf     {'C': 20, 'kernel': 'rbf'}           0.966667   \n",
+       "5       linear  {'C': 20, 'kernel': 'linear'}           1.000000   \n",
+       "\n",
+       "   split1_test_score  split2_test_score  split3_test_score  split4_test_score  \\\n",
+       "0                1.0           0.966667           0.966667                1.0   \n",
+       "1                1.0           0.966667           0.966667                1.0   \n",
+       "2                1.0           0.966667           0.966667                1.0   \n",
+       "3                1.0           0.900000           0.966667                1.0   \n",
+       "4                1.0           0.900000           0.966667                1.0   \n",
+       "5                1.0           0.900000           0.933333                1.0   \n",
+       "\n",
+       "   mean_test_score  std_test_score  rank_test_score  \n",
+       "0         0.980000        0.016330                1  \n",
+       "1         0.980000        0.016330                1  \n",
+       "2         0.980000        0.016330                1  \n",
+       "3         0.973333        0.038873                4  \n",
+       "4         0.966667        0.036515                5  \n",
+       "5         0.966667        0.042164                6  "
       ]
      },
-     "execution_count": 546,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +728,7 @@
        "5       20       linear         0.966667"
       ]
      },
-     "execution_count": 547,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +748,7 @@
        "{'C': 1, 'kernel': 'rbf'}"
       ]
      },
-     "execution_count": 548,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +768,7 @@
        "np.float64(0.9800000000000001)"
       ]
      },
-     "execution_count": 549,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +879,7 @@
        " 'verbose']"
       ]
      },
-     "execution_count": 550,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -896,15 +929,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10</td>\n",
+       "      <td>1</td>\n",
        "      <td>linear</td>\n",
-       "      <td>0.973333</td>\n",
+       "      <td>0.980000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>20</td>\n",
+       "      <td>10</td>\n",
        "      <td>linear</td>\n",
-       "      <td>0.966667</td>\n",
+       "      <td>0.973333</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -912,11 +945,11 @@
       ],
       "text/plain": [
        "   param_C param_kernel  mean_test_score\n",
-       "0       10       linear         0.973333\n",
-       "1       20       linear         0.966667"
+       "0        1       linear         0.980000\n",
+       "1       10       linear         0.973333"
       ]
      },
-     "execution_count": 551,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1086,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>random_forest</td>\n",
-       "      <td>0.966667</td>\n",
+       "      <td>0.960000</td>\n",
        "      <td>{'n_estimators': 5}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1069,11 +1102,11 @@
       "text/plain": [
        "                 model  best_score                best_params\n",
        "0                  svm    0.980000  {'C': 1, 'kernel': 'rbf'}\n",
-       "1        random_forest    0.966667        {'n_estimators': 5}\n",
+       "1        random_forest    0.960000        {'n_estimators': 5}\n",
        "2  logistic_regression    0.966667                   {'C': 5}"
       ]
      },
-     "execution_count": 553,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
